中文化完成

--- a/2-seq2seq-advanced.ipynb
+++ b/2-seq2seq-advanced.ipynb
@@ -164,17 +164,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-dd907a18ea66>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;31m#input placehodlers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mencoder_inputs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplaceholder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mint32\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'encoder_inputs'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[1;31m#contains the lengths for each of the sequence in the batch, we will pad so all the same\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[1;31m#if you don't want to pad, check out dynamic memory networks to input variable length sequences\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#input placehodlers\n",
     "encoder_inputs = tf.placeholder(shape=(None, None), dtype=tf.int32, name='encoder_inputs')\n",
     "\n",
     "#contains the lengths for each of the sequence in the batch, we will pad so all the same\n",
     "#if you don't want to pad, check out dynamic memory networks to input variable length sequences\n",
+    "#包含批次中每个序列的长度，如果不想填充，我们将填充所有相同的内容，检查动态内存网络以输入可变长度序列\n",
     "encoder_inputs_length = tf.placeholder(shape=(None,), dtype=tf.int32, name='encoder_inputs_length')\n",
     "decoder_targets = tf.placeholder(shape=(None, None), dtype=tf.int32, name='decoder_targets')"
    ]
@@ -214,9 +227,12 @@
     "#randomly initialized embedding matrrix that can fit input sequence\n",
     "#used to convert sequences to vectors (embeddings) for both encoder and decoder of the right size\n",
     "#reshaping is a thing, in TF you gotta make sure you tensors are the right shape (num dimensions)\n",
+    "# 随机初始化的嵌入矩阵，可以适合用于将序列转换为向量（嵌入）的编码器和解码器的正确尺寸重新形成的输入序列是一件事，\n",
+    "# 在TF中，您必须确保张量是正确的形状（num尺寸）\n",
     "embeddings = tf.Variable(tf.random_uniform([vocab_size, input_embedding_size], -1.0, 1.0), dtype=tf.float32)\n",
     "\n",
     "#this thing could get huge in a real world application\n",
+    "# 这件事情在现实世界的应用中可能会变得巨大\n",
     "encoder_inputs_embedded = tf.nn.embedding_lookup(embeddings, encoder_inputs)"
    ]
   },
@@ -333,6 +349,7 @@
     "#bidirectional RNN function takes a separate cell argument for \n",
     "#both the forward and backward RNN, and returns separate \n",
     "#outputs and states for both the forward and backward RNN\n",
+    "# 获得输出和状态双向RNN功能为前向和后向RNN采用单独的单元格参数，并返回前向和后向RNN的单独输出和状态\n",
     "\n",
     "#When using a standard RNN to make predictions we are only taking the “past” into account. \n",
     "#For certain tasks this makes sense (e.g. predicting the next word), but for some tasks \n",
@@ -343,7 +360,14 @@
     "#Bidirectional RNNs do exactly that. A bidirectional RNN is a combination of two RNNs – one runs forward from \n",
     "#“left to right” and one runs backward from “right to left”. These are commonly used for tagging tasks, or \n",
     "#when we want to embed a sequence into a fixed-length vector (beyond the scope of this post).\n",
-    "\n",
+    "# 当使用标准的RNN进行预测时，我们只考虑“过去”。 \n",
+    "# 对于某些任务，这是有道理的（例如预测下一个单词），但是对于某些任务来说，将过去和未来都考虑在内是有用的。\n",
+    "# 想一下标签任务，就像词性标注一样，我们要为句子中的每个单词分配一个标签。 \n",
+    "# 在这里，我们已经知道了单词的完整顺序，对于每一个单词，我们希望在进行预测时不仅考虑左边（过去）的单词，\n",
+    "# 还要考虑到正确的话（未来）。 \n",
+    "# 双向RNN正是这样做的。 \n",
+    "# 双向RNN是两个RNN的组合 - 一个从“从左到右”向前运行，一个从“从右到左”向后运行。 \n",
+    "# 这些通常用于标记任务，或者当我们要将序列嵌入固定长度向量（超出本文的范围）时。\n",
     "\n",
     "((encoder_fw_outputs,\n",
     "  encoder_bw_outputs),\n",
@@ -466,8 +490,10 @@
     "encoder_outputs = tf.concat((encoder_fw_outputs, encoder_bw_outputs), 2)\n",
     "\n",
     "#letters h and c are commonly used to denote \"output value\" and \"cell state\". \n",
+    "# 字母h和c通常用于表示“输出值”和“单元状态”。\n",
     "#http://colah.github.io/posts/2015-08-Understanding-LSTMs/ \n",
-    "#Those tensors represent combined internal state of the cell, and should be passed together. \n",
+    "#Those tensors represent combined internal state of the cell, and should be passed together.\n",
+    "# 那些张量表示细胞的内部状态，应该通过。\n",
     "\n",
     "encoder_final_state_c = tf.concat(\n",
     "    (encoder_fw_final_state.c, encoder_bw_final_state.c), 1)\n",
@@ -517,7 +543,7 @@
    },
    "outputs": [],
    "source": [
-    "#we could print this, won't need\n",
+    "#we could print this, won't need 我们可以打印这个，不需要\n",
     "encoder_max_time, batch_size = tf.unstack(tf.shape(encoder_inputs))"
    ]
   },
@@ -540,14 +566,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'encoder_inputs_length' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-0209e06bba53>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdecoder_lengths\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mencoder_inputs_length\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[1;31m# +2 additional steps, +1 leading <EOS> token for decoder inputs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[1;31m# +2个附加步骤，+1个领先的<EOS>token用于解码器输入\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'encoder_inputs_length' is not defined"
+     ]
+    }
+   ],
    "source": [
     "decoder_lengths = encoder_inputs_length + 3\n",
-    "# +2 additional steps, +1 leading <EOS> token for decoder inputs"
+    "# +2 additional steps, +1 leading <EOS> token for decoder inputs\n",
+    "# +2个附加步骤，+1个领先的<EOS>token用于解码器输入"
    ]
   },
   {
@@ -574,10 +613,10 @@
    },
    "outputs": [],
    "source": [
-    "#manually specifying since we are going to implement attention details for the decoder in a sec\n",
-    "#weights\n",
+    "#manually specifying since we are going to implement attention details for the decoder in a sec weights\n",
+    "# 手动指定，因为我们将以sec权重实现解码器的注意细节\n",
     "W = tf.Variable(tf.random_uniform([decoder_hidden_units, vocab_size], -1, 1), dtype=tf.float32)\n",
-    "#bias\n",
+    "#bias 变差\n",
     "b = tf.Variable(tf.zeros([vocab_size]), dtype=tf.float32)"
    ]
   },
@@ -585,7 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Decoder via `tf.nn.raw_rnn`\n",
+    "## Decoder via `tf.nn.raw_rnn` 解码器通过`tf.nn.raw_rnn`\n",
     "\n",
     "`tf.nn.dynamic_rnn` allows for easy RNN construction, but is limited. \n",
     "\n",
@@ -617,8 +656,10 @@
    "outputs": [],
    "source": [
     "#create padded inputs for the decoder from the word embeddings\n",
+    "#从单词嵌入创建解码器的填充输入\n",
     "\n",
     "#were telling the program to test a condition, and trigger an error if the condition is false.\n",
+    "#告诉程序测试条件，如果条件为false，则触发错误。\n",
     "assert EOS == 1 and PAD == 0\n",
     "\n",
     "eos_time_slice = tf.ones([batch_size], dtype=tf.int32, name='EOS')\n",
@@ -663,14 +704,14 @@
    "metadata": {},
    "source": [
     "Loop transition function is called two times:\n",
-    " 1. Initial call at time=0 to provide initial cell_state and input to RNN.\n",
-    " 2. Transition call for all following timesteps where you define transition between two adjacent steps.\n",
+    "1. Initial call at time=0 to provide initial cell_state and input to RNN.\n",
+    "2. Transition call for all following timesteps where you define transition between two adjacent steps.\n",
     "\n",
     "Lets define both cases separately.\n",
     "\n",
     "循环转化功能被调用了为两次：\n",
-    "  1.在时间= 0的初始化调用，并提供初始的cell_state 和 输入到RNN。\n",
-    "  2.转化调用所有以下时间步骤之间，您定义两个相邻步骤之间的转换。\n",
+    "1. 在时间= 0的初始化调用，并提供初始的cell_state 和 输入到RNN。\n",
+    "2. 转化调用所有以下时间步骤之间，您定义两个相邻步骤之间的转换。\n",
     "\n",
     "让我们分开定义这两种情况。"
    ]
@@ -694,8 +735,10 @@
    "source": [
     "#manually specifying loop function through time - to get initial cell state and input to RNN\n",
     "#normally we'd just use dynamic_rnn, but lets get detailed here with raw_rnn\n",
+    "#通过时间手动指定循环功能 - 获取初始单元格状态并通过输入到RNN，我们只需要使用dynamic_rnn，但是可以在这里使用raw_rnn\n",
     "\n",
     "#we define and return these values, no operations occur here\n",
+    "#我们定义并返回这些值，这里不会出现任何操作\n",
     "def loop_fn_initial():\n",
     "    initial_elements_finished = (0 >= decoder_lengths)  # all False at the initial step\n",
     "    #end of sentence\n",
@@ -731,33 +774,42 @@
    "outputs": [],
    "source": [
     "#attention mechanism --choose which previously generated token to pass as input in the next timestep\n",
+    "#注意机制 - 选择先前生成的token作为输入在下一个时序\n",
     "def loop_fn_transition(time, previous_output, previous_state, previous_loop_state):\n",
     "\n",
-    "    \n",
     "    def get_next_input():\n",
     "        #dot product between previous ouput and weights, then + biases\n",
+    "        #以前的输出和权重之间的点积，以及+偏差\n",
     "        output_logits = tf.add(tf.matmul(previous_output, W), b)\n",
     "        #Logits simply means that the function operates on the unscaled output of \n",
     "        #earlier layers and that the relative scale to understand the units is linear. \n",
     "        #It means, in particular, the sum of the inputs may not equal 1, that the values are not probabilities \n",
     "        #(you might have an input of 5).\n",
     "        #prediction value at current time step\n",
+    "        #Logits 只是意味着该函数对早期层的未缩放输出进行操作，并且了解单元的相对比例是线性的。 \n",
+    "        #这意味着，特别地，输入的总和可能不等于1，这些值不是概率（您可能输入为5）。 当前时间步长的预测值\n",
     "        \n",
     "        #Returns the index with the largest value across axes of a tensor.\n",
+    "        #返回在张量轴上具有最大值的索引\n",
     "        prediction = tf.argmax(output_logits, axis=1)\n",
-    "        #embed prediction for the next input\n",
+    "        #embed prediction for the next input  嵌入预测为下一个输入\n",
     "        next_input = tf.nn.embedding_lookup(embeddings, prediction)\n",
     "        return next_input\n",
-    "    \n",
-    "    \n",
+    "        \n",
     "    elements_finished = (time >= decoder_lengths) # this operation produces boolean tensor of [batch_size]\n",
     "                                                  # defining if corresponding sequence has ended\n",
+    "    # 此操作生成[batch_size]的布尔张量，定义对应序列是否已结束\n",
+    "    \n",
     "    #Computes the \"logical and\" of elements across dimensions of a tensor.\n",
+    "    #计算张量的尺寸上的元素的“逻辑与”。\n",
     "    finished = tf.reduce_all(elements_finished) # -> boolean scalar\n",
+    "    \n",
     "    #Return either fn1() or fn2() based on the boolean predicate pred.\n",
+    "    # 根据布尔谓词pred返回fn1() 或 fn2()\n",
     "    input = tf.cond(finished, lambda: pad_step_embedded, get_next_input)\n",
     "    \n",
     "    #set previous to current\n",
+    "    # 设置在当前之前\n",
     "    state = previous_state\n",
     "    output = previous_output\n",
     "    loop_state = None\n",
@@ -801,6 +853,8 @@
     "#This function is a more primitive version of dynamic_rnn that provides more direct access to the \n",
     "#inputs each iteration. It also provides more control over when to start and finish reading the sequence, \n",
     "#and what to emit for the output.\n",
+    "#创建由RNNCell单元格指定的RNN和循环函数loop_fn。 此函数是一个更原始的版本的dynamic_rnn，可以更直接地访问每次迭代的输入。 \n",
+    "#它还可以更好地控制何时开始和完成读取序列，以及输出的内容。\n",
     "#ta = tensor array\n",
     "decoder_outputs_ta, decoder_final_state, _ = tf.nn.raw_rnn(decoder_cell, loop_fn)\n",
     "decoder_outputs = decoder_outputs_ta.stack()"
@@ -847,15 +901,19 @@
    "source": [
     "#to convert output to human readable prediction\n",
     "#we will reshape output tensor\n",
+    "# 将输出转换为人类可读预测\n",
+    "# 我们将重塑输出张量\n",
     "\n",
     "#Unpacks the given dimension of a rank-R tensor into rank-(R-1) tensors.\n",
+    "#将包含秩R的张量的给定维数纳入 rank-(R-1) 张量。\n",
     "#reduces dimensionality\n",
+    "#降低维度\n",
     "decoder_max_steps, decoder_batch_size, decoder_dim = tf.unstack(tf.shape(decoder_outputs))\n",
     "#flettened output tensor\n",
     "decoder_outputs_flat = tf.reshape(decoder_outputs, (-1, decoder_dim))\n",
-    "#pass flattened tensor through decoder\n",
+    "#pass flattened tensor through decoder 通过解码器通过平坦张量\n",
     "decoder_logits_flat = tf.add(tf.matmul(decoder_outputs_flat, W), b)\n",
-    "#prediction vals\n",
+    "#prediction vals 预测值\n",
     "decoder_logits = tf.reshape(decoder_logits_flat, (decoder_max_steps, decoder_batch_size, vocab_size))"
    ]
   },
@@ -868,7 +926,7 @@
    },
    "outputs": [],
    "source": [
-    "#final prediction\n",
+    "#final prediction 最终预测\n",
     "decoder_prediction = tf.argmax(decoder_logits, 2)"
    ]
   },
@@ -898,6 +956,7 @@
    "source": [
     "#cross entropy loss\n",
     "#one hot encode the target values so we don't rank just differentiate\n",
+    "#one-hot编码目标值，所以我们不排名只是区分\n",
     "stepwise_cross_entropy = tf.nn.softmax_cross_entropy_with_logits(\n",
     "    labels=tf.one_hot(decoder_targets, depth=vocab_size, dtype=tf.float32),\n",
     "    logits=decoder_logits,\n",
